Update application.yml and Data preloading logic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,14 +11,14 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
-  h2:
-    console:
-      enabled: true
-
   jpa:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+  sql:
+    init:
+      mode: always
 
   rabbitmq:
     host: ${SPRING_RABBITMQ_HOST}
