Update messaging and add Retry, Rate Limiter and Dashboard

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,17 @@ resilience4j:
         waitDurationInOpenState: 10s
         permittedNumberOfCallsInHalfOpenState: 2
         automaticTransitionFromOpenToHalfOpenEnabled: true
+  retry:
+    instances:
+      recruiterNotify:
+        maxAttempts: 3
+        waitDuration: 500ms
+  ratelimiter:
+    instances:
+      recruiterNotify:
+        limitForPeriod: 5
+        limitRefreshPeriod: 10s
+        timeoutDuration: 500ms
 
 mq:
   queue: recruiter.notifications
@@ -63,6 +74,7 @@ management:
     export:
       prometheus:
         enabled: true
+
 
 
 #server:
